Ajuda o pacote pageslts a determinar a numeração
De acordo com a documentação, isto passou a ser recomendado de uma
versões para cá.

--- a/df-ufpb.cls
+++ b/df-ufpb.cls
@@ -152,6 +152,7 @@
 \RequirePackage{indentfirst}%
 \RequirePackage{setspace}%
 \RequirePackage{pageslts}%
+\pagenumbering{arabic}%
 \RequirePackage{babel}%
 \RequirePackage{graphicx}
 
