Assume bacharel como titulação para o TCC
No caso de licenciatura, deve ser informado explicitamente pelo usuário.

--- a/df-ufpb.cls
+++ b/df-ufpb.cls
@@ -44,7 +44,7 @@
 }%
 
 \DeclareOption{tcc}{%
- \def\ufpb@titulacao{Licenciado(a)}%
+ \def\ufpb@titulacao{Bacharel}%
  \def\ufpb@documento{\monographname}%
  \def\ufpb@programa{à Coordena\c{c}\~{a}o do Curso de %
    Filosofia}%
