Ajusta as listas de tabelas e figuras
Agora também são inseridas no sumário, além dos marcadores no PDF.

--- a/df-ufpb.cls
+++ b/df-ufpb.cls
@@ -610,18 +610,14 @@
 }
 
 \newcommand{\listadefiguras}{%
-  \ifpdf%
-  \pdfbookmark[1]{\listfigurename}{figuras}
-  \fi
+  \addcontentsline{toc}{section}{\listfigurename}
   \listoffigures%
   \thispagestyle{empty}%
   \clearpage%
 }%
 
 \newcommand{\listadetabelas}{%
-  \ifpdf%
-  \pdfbookmark[1]{\listtablename}{tabelas}
-  \fi
+  \addcontentsline{toc}{section}{\listtablename}
   \listoftables%
   \thispagestyle{empty}%
   \clearpage%
