Ajustes no modelo ilustrativo

--- a/modelo.tex
+++ b/modelo.tex
@@ -63,7 +63,7 @@
 
 
 \chapter{Teoria dos Números}
-Neste capítulo, apresentarei alguns resultados sobre números inteiros \autocite{gaussW8}.
+Neste capítulo, apresento alguns resultados sobre números inteiros \autocite{gaussW8}.
 
 \lipsum[1-3]
 
@@ -104,7 +104,7 @@ Proponho o estudo de casos especiais da Conjectura de Fermat.
 \begin{theorem}
   Seja $p$ um número primo ímpar. Caso exista um número primo auxiliar $q = 2np +1$, onde $n$ é um inteiro positivo que não é múltiplo de $3$, tal que:
   \begin{enumerate}
-  \item se $x^{p} + y^{p} + z^{p} = 0 (\text{mod} q)$, então $q$ divide $zyz$
+  \item se $x^{p} + y^{p} + z^{p} = 0 (\text{mod } q)$, então $q$ divide $zyz$
   \item $p$ não é o $p$-ésimo resíduo exponencial módulo $q$
   \end{enumerate}
   então a Conjectura de Fermat se aplica no caso $p$.
@@ -124,7 +124,8 @@ Proponho o estudo de casos especiais da Conjectura de Fermat.
 
 \chapter{Elasticidade}
 
-Eu desenvolvo trabalho inicial de \textcite{lagrangeO}.
+Eu desenvolvo certas investigações iniciadas por \textcite{lagrangeO}.
+
 \section{Observações finais}
 \lipsum[1-7]
 
