Ajustes no modelo ilustrativo

--- a/modelo.tex
+++ b/modelo.tex
@@ -1,13 +1,17 @@
 %% Preâmbulo
 
 \documentclass[12pt,tcc,abnt,latin,english,brazil]{df-ufpb}
-\usepackage[lmargin=2.5cm,tmargin=2.5cm,rmargin=2.5cm,bmargin=2.5cm]{geometry} % margens da folha
+%%%% As pessoas por vezes preferem margens menores e linhas mais espaçadas. 
+\usepackage[lmargin=2.5cm,tmargin=2.5cm,rmargin=2.5cm,bmargin=2.5cm]{geometry}
+\onehalfspacing
+%%%%
 \usepackage{tikz}
 \usepackage{amssymb,amsthm,amsmath}
 \newtheorem{theorem}{Teorema}[section]
 \usepackage[style=abnt]{biblatex}
 \addbibresource{amostra.bib}
 \usepackage{lipsum}
+
 %%% Metadados
 
 \titulo{Investigações Sobre a Teoria das Superfícies Elásticas}
