Pequena correção ao abstract
Substituição de "Bachelor's Monograph" para "Undergraduate Thesis"

--- a/df-ufpb.cls
+++ b/df-ufpb.cls
@@ -135,7 +135,7 @@
       \def\keysname{Keywords}%
       \def\thesisname{PhD Thesis}%
       \def\dissertationname{Master's Dissertation}%
-      \def\monographname{Bachelor's Monograph}%
+      \def\monographname{Undergraduate Thesis}%
       \def\acknowledgementsname{Acknowledgements}%
     }%
   }%
