--- a/modelo.tex
+++ b/modelo.tex
@@ -40,8 +40,8 @@
 \rosto
 \ficha
 \begin{aprovacao}
-  \membro{Prof. Dr. Jean-Baptiste Joseph Fourier}{Universidade de Paris}{Arguidor}
-  \membro{Prof. Dr. Johann Carl Friedrich Gauss}{Universidade de Göttingen}{Arguidor}
+  \membro{Jean-Baptiste Joseph Fourier}{Universidade de Paris}{Arguidor}
+  \membro{Johann Carl Friedrich Gauss}{Universidade de Göttingen}{Arguidor}
 \end{aprovacao}
 \begin{dedicatoria}
 à Isabel do Palatinado, com admiração  
